
cmake_minimum_required(VERSION 2.8.12)
if (${CMAKE_VERSION} VERSION_GREATER 3.0)
    cmake_policy(SET CMP0048 NEW)
endif()

project(client_examples)

find_package(microcdr REQUIRED)
find_package(microxrcedds_client REQUIRED)

set(SRCS
    CourseSpeedDepth.c
    )

# CourseSpeedDepth Subscriber
add_executable(CourseSpeedDepthSubscriber CourseSpeedDepthSubscriber.c ${SRCS})
target_link_libraries(CourseSpeedDepthSubscriber microxrcedds_client)
set_target_properties(CourseSpeedDepthSubscriber PROPERTIES
    C_STANDARD
        99
    C_STANDARD_REQUIRED
        YES
    )
target_compile_options(CourseSpeedDepthSubscriber
    PRIVATE
        $<$<C_COMPILER_ID:MSVC>:/W4 /wd4700 /wd4996 /wd4820 /wd4255 /wd4668>
        $<$<C_COMPILER_ID:GNU>:-pedantic -fstrict-aliasing -Wall -Wcast-align -Wshadow>
    )

# CourseSpeedDepth Publisher
add_executable(CourseSpeedDepthPublisher CourseSpeedDepthPublisher.c ${SRCS})
target_link_libraries(CourseSpeedDepthPublisher microxrcedds_client m)
set_target_properties(CourseSpeedDepthPublisher PROPERTIES
    C_STANDARD
        99
    C_STANDARD_REQUIRED
        YES
    )
target_compile_options(CourseSpeedDepthPublisher
    PRIVATE
        $<$<C_COMPILER_ID:MSVC>:/W4 /wd4700 /wd4996 /wd4820 /wd4255 /wd4668>
        $<$<C_COMPILER_ID:GNU>:-pedantic -fstrict-aliasing -Wall -Wcast-align -Wshadow>
    )

